Add tests, improve chassis, factor out distinct concerns, some cleanup

--- a/Chassis.AzFunc1.Test/Chassis.AzFunc1.Test.csproj
+++ b/Chassis.AzFunc1.Test/Chassis.AzFunc1.Test.csproj
@@ -65,9 +65,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="UnitTest1.cs" />
+    <Compile Include="AzFuncTransportImpl.cs" />
+    <Compile Include="AzFuncConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="UnitTestConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
