Tidy up names in Chassis.AzFunc1 and tests

--- a/Chassis.AzFunc1.Test/Chassis.AzFunc1.Test.csproj
+++ b/Chassis.AzFunc1.Test/Chassis.AzFunc1.Test.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AzFuncTransportImpl.cs" />
+    <Compile Include="AzFuncTransportTests.cs" />
     <Compile Include="AzFuncConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
